# pi_agent_rust

./: .gitignore  .rchignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.sh  rust-toolchain.toml  uninstall.sh
.github/workflows/: conformance.yml
benches/: extension_budget_inputs.rs
docs/: EXTENSION_REFRESH_CHECKLIST.md  TEST_COVERAGE_MATRIX.md  context-intelligence.md  development.md  e2e_scenario_matrix.json  ext-compat.md  extension-compatibility-matrix.md  provider-auth-troubleshooting.md  provider-discrepancy-ledger.json  provider-onboarding-playbook.md  provider-upstream-model-ids-snapshot.json  providers.md  qa-runbook.md  sdk.md  swarm-activity-ledger.md  swarm-flight-recorder.md  swarm-operations-runbook.md  test_double_inventory.json  testing-policy.md  traceability_matrix.json
docs/contracts/: context-intelligence-closeout-gate-contract.json  extension-resource-firewall-matrix-contract.json  provider-rpc-tui-backpressure-budget-contract.json  swarm-operator-runpack-contract.json  swarm-progress-slo-contract.json  swarm-turn-pressure-ledger-contract.json  swarm-work-admission-gate-contract.json  validation-broker-closeout-gate-contract.json  validation-proof-memory-index-contract.json
docs/evidence/: context-intelligence-closeout-gate.json  dropin-certification-verdict.json  extension-event-subscription-failure-taxonomy.json  provider-rpc-tui-backpressure-budget-contract.json  rpc-output-pressure.jsonl  validation-broker-closeout-gate.json  validation-proof-memory-index.json
fuzz/fuzz_targets/: fuzz_tool_paths.rs
scripts/: build_swarm_operator_runpack.py  check_provider_discrepancy_ledger.py  check_rch_artifact_sync.py  check_ubs_staged_delta.py  ext_conformance_reproducer.py  package-lock.json  package.json  run_swarm_smoke_harness.py  summarize_ext_conformance_failures.py
scripts/ci/: validate_counting_taxonomy.py
scripts/perf/: artifact_staging.py  orchestrate.sh  preflight_budget_inputs.py
src/: acp.rs  agent.rs  app.rs  auth.rs  cli.rs  compaction_worker.rs  config.rs  doctor.rs  error.rs  error_hints.rs  extensions.rs  extensions_js.rs  file_lock.rs  interactive.rs  lib.rs  main.rs  migrations.rs  model.rs  models.rs  package_manager.rs  perf_build.rs  provider_metadata.rs  resource_governor.rs  resources.rs  rpc.rs  sdk.rs  semantic_workspace_graph.rs  session.rs  session_index.rs  session_sqlite.rs  session_store_v2.rs  sse.rs  swarm_activity_ledger.rs  swarm_flight_recorder.rs  swarm_replay.rs  tools.rs
src/connectors/: http.rs
src/http/: client.rs
src/interactive/: agent.rs  commands.rs  conversation.rs  tree_ui.rs  view.rs
src/providers/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  cursor.rs  gemini.rs  gitlab.rs  mod.rs  model_fetch.rs  openai.rs  openai_responses.rs  vertex.rs
tests/: auth_oauth_refresh_vcr.rs  ci_full_suite_gate.rs  cli_edge_cases.rs  context_intelligence_closeout_gate_contract.rs  doctor_swarm_temp_dir_json.rs  dropin_extension_ui_differential.rs  dropin_rpc_differential.rs  e2e_agent_loop.rs  e2e_cli.rs  e2e_extension_lifecycle_perf.rs  e2e_high_risk_workflows.rs  e2e_provider_failure_injection.rs  e2e_swarm_flight_recorder.rs  e2e_transient_retry_resume.rs  e2e_tui.rs  error_handling.rs  ext_conformance_generated.rs  ext_conformance_matrix.rs  ext_inclusion_list.rs  ext_memory_stress.rs  extension_validation.rs  extensions_auth_error_coverage.rs  extensions_event_cancellation.rs  extensions_fs_shim.rs  extensions_oco_heterogeneous.rs  extensions_process_shim.rs  extensions_provider_oauth.rs  extensions_stress.rs  installer_regression.sh  main_cli_selection.rs  node_buffer_shim.rs  node_fs_shim.rs  non_mock_compliance_gate.rs  npm_module_stubs.rs  perf_bench_harness.rs  perf_regression.rs  provider_error_paths.rs  provider_factory.rs  provider_native_contract.rs  provider_native_verify.rs  (+15 more)
tests/common/: logging.rs  scenario_runner.rs
tests/conformance/: fixture_runner.rs  mod.rs
tests/conformance/fixtures/: cli_flags.json  find_tool.json
tests/conformance/goldens/cli_flags/: defaults.json
tests/dropin_slash_differential/: mod.rs
tests/evidence_bundle/: bundle_report.md  events.jsonl  index.json
tests/ext_conformance/: VALIDATED_MANIFEST.json
tests/ext_conformance/artifacts/pi_ai_fail_closed/: pi_ai_fail_closed.ts
tests/ext_conformance/reports/: conformance_baseline.json
tests/ext_conformance/reports/gate/: must_pass_events.jsonl  must_pass_gate_report.md  must_pass_gate_verdict.json
tests/fixtures/vcr/: azure_auth_failure_401.json  azure_bad_request_400.json  azure_multi_paragraph.json  azure_rate_limit_429.json  azure_simple_text.json  azure_tool_call_multiple.json  azure_tool_call_single.json  azure_tool_result_processing.json  azure_unicode_content.json  azure_very_long_response.json  gemini_auth_failure_401.json  gemini_bad_request_400.json  gemini_multi_paragraph.json  gemini_rate_limit_429.json  gemini_simple_text.json  gemini_tool_call_multiple.json  gemini_tool_call_single.json  gemini_tool_result_processing.json  gemini_unicode_content.json  gemini_very_long_response.json  verify_azure_error_auth_401.json  verify_azure_error_bad_request_400.json  verify_azure_error_rate_limit_429.json  verify_azure_simple_text.json  verify_azure_tool_call_multiple.json  verify_azure_tool_call_single.json  verify_azure_unicode_text.json
tests/franken_node_compat/reports/: compatibility_matrix.json
tests/full_suite_gate/: certification_events.jsonl  certification_report.md  certification_verdict.json  extension_remediation_backlog.json  extension_remediation_backlog.md  full_suite_events.jsonl  full_suite_report.md  full_suite_verdict.json  perf3x_bead_coverage_audit.json  practical_finish_checkpoint.json  swarm_activity_digest.json  waiver_audit.json
tests/golden_corpus/swarm_operator_runpack/: complete_runpack_projection.json
tests/golden_corpus/swarm_replay_trace/: policy_comparison_metrics.json
tests/perf/reports/: stress_triage.json
tests/provider_streaming/: anthropic.rs  azure.rs  cohere.rs  gemini.rs  openai.rs  openai_responses.rs
(+14 files in other folders)
